Update to Xtext 2.14! Maven build don't work yet, due to artifacts not being in Maven Central (plus other issues...), but everything seems to work inside Eclipse!